Align auth middleware with component-template and adds mocked packages
